# Harmoniq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  harmoniq.rc
scripts/: android.sh  desktop.sh  setup.sh
src/: Application.cpp  CMakeLists.txt  core.qrc  main.qml
src/brushes/: BrushEffects.hpp  BrushInfo.hpp  BrushManager.cpp  BrushManager.hpp  CMakeLists.txt
src/config/: CMakeLists.txt  precompiled.hpp
src/configs/: CMakeLists.txt  debug.hpp  platform.hpp  precompiled.hpp  types.hpp
src/document/: CMakeLists.txt  Document.cpp  Document.hpp  DocumentManager.cpp  DocumentManager.hpp
src/history/: CMakeLists.txt  CanvasHistoryManager.cpp  CanvasHistoryManager.hpp
src/layer/: CMakeLists.txt  CanvasGL.cpp  CanvasGL.hpp  Layer.cpp  Layer.hpp  LayerInfo.hpp  LayerManager.cpp  LayerManager.hpp  LayerRenderer.cpp  LayerRenderer.hpp  LayersModel.cpp  LayersModel.hpp  Tools.cpp  Tools.hpp  canvas.frag  layer.qrc
src/provider/: CMakeLists.txt  ThumbnailImageProvider.hpp
src/qml/: CMakeLists.txt  ColorPicker.qml  DocumentTab.qml  Layer.qml  StartScreen.qml  qml.qrc
src/qml/ToolBars/: LeftBar.qml  RightBar.qml  TopBar.qml  TopMenu.qml
src/qml/ToolBars/icons/: icons.qrc
src/shaders/: shaders.qrc
src/styles/: StyleResources.qrc
src/styles/harmoniq/: MenuBar.qml  Themes.qml  ToolButton.qml  qmldir
src/tools/: BrushTool.hpp  CMakeLists.txt  ColorPicker.hpp  EraseTool.hpp  FillTool.hpp  LineTool.hpp  MoveTool.hpp  SelectionTool.hpp  ShapeTool.hpp  ToolHandler.hpp  ToolSettings.cpp  ToolSettings.hpp
src/ui/: CMakeLists.txt
src/ui/qml/: Canvas.qml  Layer.qml  StartScreen.qml  ui.qrc
src/ui/qml/ToolBars/: LeftBar.qml  RightBar.qml  TopMenu.qml
src/ui/qml/ToolBars/icons/: icons.qrc
